# Youtube-Music-Cli

./: Cargo.toml
crates/database/: Cargo.toml
crates/database/src/: lib.rs  reader.rs  writer.rs
crates/ytapi2/: Cargo.toml
crates/ytapi2/src/: endpoint.rs  instance.rs  json_extractor.rs  lib.rs  main.rs  types.rs  utils.rs
crates/ytermusic/: Cargo.toml
crates/ytermusic/src/: consts.rs  database.rs  errors.rs  main.rs  shutdown.rs  utils.rs
crates/ytermusic/src/structures/: media.rs  mod.rs  perfomance.rs
crates/ytermusic/src/systems/: logger.rs
crates/ytermusic/src/tasks/: clean.rs  mod.rs
crates/ytermusic/src/term/: mod.rs
