[package]
name = "ytapi2"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.26", features = [
    "gzip",
    "deflate",
    "cookies",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.20"
sha1 = "0.10.6"
